syntax = "proto3";

package user_srv;

service UserService {
    rpc Login(LoginReq) returns (LoginRsq) {}
    rpc User(UserReq) returns (UserRsq) {}
}
message LoginReq {
    string platform = 1; //password(email phone username) qq wx weibo 
    string openid = 2;
    string access_token = 3;
}
message LoginRsq {
    int64 uid = 1;
}
message UserReq {
    int64 uid = 1;
}
message UserRsq {
    int64 uid = 1;
    string nickname = 2;
    string gender = 3;
    string avatar = 4;
    string updated_at = 5;
    string created_at = 6;
}